<resources>
    <string name="app_name">Odessa Tracker</string>
    <string name="error_gmail">Mistake in your email</string>
    <string name="password_error">Password error!</string>
    <string name="error_name">Invalid name!</string>
    <string name="parks_squares">Parks/squares</string>
    <string name="museums">Museums</string>
    <string name="attractions">Attractions</string>
    <string name="select_all">Select all</string>
    <string name="excursions">Excursions</string>
    <string name="theaters">Theaters</string>
    <string name="city_events">City events</string>
    <string name="cinemas">Cinemas</string>
    <string name="concerts">Concerts</string>
    <string name="cafes_restaurants">Сafes/restaurants</string>
</resources>
